# vidgen

./: .gitignore  BUGS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  prd.md
.github/workflows/: ci.yml  release.yml
docs/: agent-guide.md
example/: project.toml
example/scenes/: 01-title-card.md  06-lower-third.md  07-cta-card.md
examples/features-test/: .gitignore  project.toml
examples/features-test/scenes/: 01-emoji-title.md  02-asset-demo.md  03-voice-config.md  04-emoji-kinetic.md  05-custom-component.md  06-cta.md
examples/intro/: .gitignore  project.toml
examples/intro/scenes/: 02-content-text.md  03-kinetic-text.md  04-split-screen.md  05-quote-card.md
examples/minimal/: project.toml
examples/minimal/scenes/: 01-intro.md  02-outro.md
examples/showcase/: project.toml
examples/showcase/scenes/: 01-title-card.md  02-content-text.md  03-kinetic-text-fade.md  (+11 more)
examples/video-clips/: .gitignore  project.toml  setup.sh
src/: cli.rs  config.rs  error.rs  main.rs  mcp.rs  scene.rs  subtitle.rs  template.rs
src/commands/: asset.rs  clip.rs  diff.rs  export.rs  info.rs  init.rs  mcp.rs  mod.rs  preview.rs  quickrender.rs  render.rs  scenes.rs  templates.rs  test.rs  validate.rs  watch.rs
src/render/: browser.rs  encoder.rs  frame_cache.rs  mod.rs  overlay.rs  sequence.rs
src/templates/: caption-overlay.html  content-text.html  cta-card.html  kinetic-text.html  lower-third.html  quote-card.html  slideshow.html  split-screen.html  title-card.html
src/tts/: cache.rs  edge.rs  elevenlabs.rs  mod.rs  native.rs  piper.rs  timestamps.rs
(+9 files in other folders)
